Fixes #37079 - Show current user in nav menu when screen too small

--- a/webpack/assets/javascripts/react_app/components/Layout/layout.scss
+++ b/webpack/assets/javascripts/react_app/components/Layout/layout.scss
@@ -33,6 +33,11 @@
 
 .pf-c-nav {
   .nav-title-icon {
+    word-break: break-word;
+    overflow-wrap: break-word;
+    white-space: normal;
+  }
+  .nav-icon {
     pointer-events: none;
     padding-right: 10px;
   }
